--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
