--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <button class="mappingBtn">Mapping</button>
     <div class="container">
     </div>
     <script type="module" src="/main.js"></script>
